--- a/start_make_db.ipynb
+++ b/start_make_db.ipynb
@@ -186,6 +186,200 @@
     "remote.commit()\n",
     "print('task is done!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# naver news 전처리\n",
+    "import pandas as pd\n",
+    "import pickle\n",
+    "import re\n",
+    "\n",
+    "with open('secret_naver_news_data.pkl', 'rb') as f:\n",
+    "    df_naver = pd.DataFrame(pickle.load(f))\n",
+    "\n",
+    "ch_df = df_naver[df_naver[1].apply(lambda x: False if x.find('@')==-1 else True)][1].str.split('@').str[0].apply(lambda x: ' '.join(re.split(r'[(, )]', x)[:-1]))\n",
+    "df_naver.loc[ch_df.index,1] = ch_df\n",
+    "df_naver[9] = df_naver[9].apply(lambda x: ' '.join([_ for _ in x if '\\t' not in _ and '\\n' not in _]))\n",
+    "df_naver[12] = '세계'\n",
+    "df_naver = df_naver[[12,5,8,2,0,1,3,4,9,11,7]]\n",
+    "df_columns = ['cat1_name', 'cat2_name', 'platform_name', 'title', 'press', 'writer', 'date_upload', 'date_fix', 'content', 'sticker', 'url']\n",
+    "df_naver.columns = df_columns\n",
+    "\n",
+    "# 결측값은 모두 None으로 변경\n",
+    "df_naver.loc[df_naver[df_naver['date_fix']=='null'].index, 'date_fix'] = None\n",
+    "df_naver.loc[df_naver[df_naver['writer']=='null'].index, 'writer'] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# naver news 전처리\n",
+    "import pandas as pd\n",
+    "import pickle\n",
+    "import re\n",
+    "\n",
+    "with open('secret_daum_news_data.pkl', 'rb') as f:\n",
+    "    df_daum = pd.DataFrame(pickle.load(f))\n",
+    "\n",
+    "df_columns = ['cat1_name', 'cat2_name', 'platform_name', 'title', 'press', 'writer', 'date_upload', 'date_fix', 'content', 'sticker', 'url']\n",
+    "classified = {1411: '아시아/대양주', 1412: '미국/아메리카', 1413: '유럽', 1414: '중동/아프리카', 1415: '국제일반', 1416: '영어뉴스', 1417: '해외화제', 1418: '일본', 1419: '중국'}\n",
+    "\n",
+    "df_daum[11] = '국제'\n",
+    "df_daum = df_daum[[11,6,8,2,0,1,3,4,9,10,7]]\n",
+    "df_daum[6] = df_daum[6].apply(lambda x: classified.get(int(x)))\n",
+    "df_daum[1] = df_daum[1].apply(lambda x: None if str(x).find('입력 <span')==0 else x)\n",
+    "df_daum[3] = [datetime(int(__[0]), int(__[1]), int(__[2]), int(__[3].split(':')[0]), int(__[3].split(':')[1])).strftime('%Y-%m-%d %H:%M:%S') for __ in [_.split('. ') for _ in df_daum[3]]]\n",
+    "df_daum[4] = None\n",
+    "df_daum.columns = df_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# column 이름 일치 확인\n",
+    "def insert_news(remote, df):\n",
+    "    df_columns = ['cat1_name', 'cat2_name', 'platform_name', 'title', 'press', 'writer', 'date_upload', 'date_fix', 'content', 'sticker', 'url']\n",
+    "    if sum(~(df_columns==df.columns)):\n",
+    "        raise Exception(f\"columns' name dont matched!!\\nmake columns' name like {df_columns}\")\n",
+    "\n",
+    "    # platform_name 변환 및 cat2_id 할당\n",
+    "    with open('category.json', 'r') as f:\n",
+    "                SUB_CATEGORY_DICT = json.load(f)\n",
+    "                \n",
+    "    df['platform_name'] = [platform if platform in (\"네이버\", \"다음\") else \"네이버\" if platform.upper()==\"NAVER\" else \"다음\" if platform.upper()==\"DAUM\" else None for platform in df['platform_name']]\n",
+    "    if df['platform_name'].isna().any():\n",
+    "        raise Exception('some platform_name rows wrong!!')\n",
+    "    df['cat2_id'] = [SUB_CATEGORY_DICT[_[0]][_[1]][_[2]] for _ in df[['platform_name', 'cat1_name', 'cat2_name']].values]\n",
+    "    df_columns = ['cat2_id']+df_columns\n",
+    "    df = df[df_columns]\n",
+    "    df.drop(columns=['cat1_name', 'cat2_name', 'platform_name'], inplace=True)\n",
+    "\n",
+    "    # sticker json 따옴표 변경\n",
+    "    if not sum(df['sticker'].apply(str).str.count('\"')):\n",
+    "        df['sticker'] = df['sticker'].apply(json.dumps)\n",
+    "\n",
+    "    with remote.cursor() as cur:\n",
+    "        my_query = \"insert ignore into NEWS(cat2_id, title, press, writer, date_upload, date_fix, content, sticker, url) values(%s, %s, %s, %s, %s, %s, %s, %s, %s)\"\n",
+    "        cur.executemany(my_query, df.values.tolist())\n",
+    "    remote.commit()\n",
+    "insert_news(remote, df_daum)\n",
+    "insert_news(remote, df_naver)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# naver comment 전처리\n",
+    "import pandas as pd\n",
+    "import pickle\n",
+    "import re\n",
+    "from datetime import datetime\n",
+    "\n",
+    "with open('secret_naver_news_data.pkl', 'rb') as f:\n",
+    "    df_naver = pd.DataFrame(pickle.load(f))\n",
+    "df = df_naver[[10,7]]\n",
+    "df.columns = ['comment', 'url']\n",
+    "df = df[df.comment.apply(len)!=0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp_list = []\n",
+    "with remote.cursor() as cur:\n",
+    "    my_query = \"select id, url from news where url=%s\"\n",
+    "    for v in df['url'].values:\n",
+    "        cur.execute(my_query, v)\n",
+    "        tmp_list.extend(cur.fetchall())\n",
+    "\n",
+    "tmp_list = pd.DataFrame(tmp_list, columns=['news_id', 'url'])\n",
+    "df = pd.merge(df, tmp_list, 'left', 'url').explode('comment').reset_index(drop=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trash, df['comment'], df['user_id'], df['user_name'], df['date_upload'], df['date_fix'], df['good_cnt'], df['bad_cnt'] = zip(*df.comment.values)\n",
+    "del trash\n",
+    "df['date_upload'] =  df['date_upload'].str.split('+').str[0]\n",
+    "df['date_upload'] = [' '.join(date__[:-5].split('T')) for date__ in df['date_upload']]\n",
+    "df['date_fix'] = [' '.join(date__[:-5].split('T')) for date__ in df['date_fix']]\n",
+    "df = df[~df.user_id.isna()].reset_index(drop=True)\n",
+    "df_columns = ['news_id', 'user_id', 'user_name', 'comment', 'date_upload', 'date_fix', 'good_cnt', 'bad_cnt']\n",
+    "df = df[df_columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_df = df.groupby(['user_id', 'user_name']).count().reset_index()[['user_id', 'user_name']]\n",
+    "with remote.cursor() as cur:\n",
+    "    my_query = \"insert ignore into USER(user_id, user_name) values(%s, %s)\"\n",
+    "    cur.executemany(my_query, user_df.values.tolist())\n",
+    "remote.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get user_id\n",
+    "tmp_list = []\n",
+    "with remote.cursor() as cur:\n",
+    "    my_query = \"select id, user_id from user where user_id=%s\"\n",
+    "    for v in user_df.user_id.values:\n",
+    "        cur.execute(my_query, v)\n",
+    "        tmp_list.extend(cur.fetchall())\n",
+    "tmp_list = pd.DataFrame(tmp_list, columns=['id', 'user_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.merge(df, tmp_list.drop_duplicates('user_id').reset_index(drop=True), 'left', 'user_id').reset_index(drop=True)\n",
+    "df_columns.pop(2)\n",
+    "df = df.drop(columns='user_id').rename(columns={'id': 'user_id'})[df_columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with remote.cursor() as cur:\n",
+    "    my_query = \"insert ignore into COMMENT(news_id, user_id, comment, date_upload, date_fix, good_cnt, bad_cnt) values(%s, %s, %s, %s, %s, %s, %s)\"\n",
+    "    cur.executemany(my_query, df.values.tolist())\n",
+    "remote.commit()"
+   ]
   }
  ],
  "metadata": {
